2009-06-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Support named styles also for filetypes.common [styling] entries.
 * doc/geany.txt, doc/geany.html, HACKING:
   Update docs for named styles in filetypes.* files.
 * src/symbols.c:
   Fix grouping symbol list children when parent name has "." character
   in for reStructuredText and Conf filetypes (and any in the Misc
   group).
 * tagmanager/python.c:
   Fix grouping functions/classes under a nested function.


2009-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.spec.in:
   Adjust icon paths (patch by Dominic Hopf, thanks).
 * doc/geany.txt, doc/geany.html, src/toolbar.c:
   Add 'Replace' toolbar button (closes #2798225).


2009-05-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/highlighting.c, TODO:
   Implement named styles support for filetypes.* using a
   filetypes.common [named_styles] section e.g.:
   foo=0xc00000;0xffffff;false;true
   bar=foo
   These can be used in e.g. filetypes.c as:
   comment=foo


2009-05-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c:
   Fix wrong sensitiveness of the Redo buttons (closes #2797862).


2009-05-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * THANKS, src/about.c, po/lb.po, po/LINGUAS:
   Added Luxembourgian translation. Huge thanks to Laurent Hoeltgen.


2009-05-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c:
   Remove quote_executable() as it is not used anymore.
   When creating the geany_run_script.bat use the "%0" variable
   expansion and quote it for the "del" command (closes #2797172).
 * src/win32.c:
   On Windows, fallback to the literal build command line if searching
   for the command in the system path failed (related to #2795923).
   Properly terminate the resulting strings when reading the stdout
   and stderr of any spawned commands on Windows.

